8374343: Fix SIGSEGV when lib/modules is unreadable

Reviewed-by: iklam, dholmes